tests/errors/first_stage/operation/index_oor/index_oor.am
mystring: .string "Hello, world!"
.define length = 13
prn #length
cmp mystring[0], mystring[14]
